fixed key on mobile

--- a/src/css/_candidate.scss
+++ b/src/css/_candidate.scss
@@ -65,7 +65,6 @@
 			stroke:#bdbdbd;
 		}
 		path.left {
-			stroke:#ff0000;
 			stroke:url(#left);
 		}
 		path.right {
